2012-10-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (term_start_multiplot): The calculation of vertical space
	required for a plot title depends on term->v_char, which in turn depends
	on the font used for the title. Bugfix.

	* term/gd.trm (set_font): The libgd terminals were failing to 
	notice a change in font size sent by set_term(",newsize")
	Bugfix (old bug!)

	* term/canvas.trm (set_font): Minimal set_font routine for canvas
	terminal.  All it does at this point is change or restore the font size.

2012-10-14  Dima Kogan  <dima@secretsauce.net>

	* src/gplt_x11.c: 
	With -replotonresize the resize triggered two replots, the initial
	outboard-only even-aspect-ratio one, and then the full replot.
	This fix skips the first of these.
	When the inboard driver is killed, the mouse-over coordinates were not
	computed correctly.  Bugfix.

2012-10-14  Ruediger Haertel  <haertel@users.sourceforge.net>

	* src/term.c (term_start_multiplot) docs/gnuplot.doc:
	Add enhanced/noenhanced option to "set multiplot title".

2012-10-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/qt_term.cpp (qt_set_font):  term->set_font("")
	must restore the default terminal font and size.
	Bugfix.

	* src/qtterminal/qt_term.cpp (qt_set_font qt_options):
	Make the current terminal font visible to the user.
	Update the font metrics whenever the font is changed.
	Bugfix.

	* demo/layout.dem: Modified to act as a test for the above bug fixes.

2012-10-12  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Replace sizes given in points with sizes in user
	coordinates (nominally pixels = "px").  In empirical tests this makes
	the estimates generated for string width more accurate.  An alternative
	might be to give sizes in points multiplied by some internal variable
	that could be recalculated dynamically at display time.

	* term/svg.trm: Replace bundled style attributes with individual 
	specifications.  E.g.   