@@ -1,5 +1,9 @@
 2012-10-16  Ethan A Merritt  <merritt@u.washington.edu>
 
+	* term/lua.trm term/lua/gnuplot-tikz.lua:  The set_font() routine must
+	update term->v_char and term->h_char. set_font("") must restore the
+	default font. Bugfix.
+
 	* src/term.c (term_start_multiplot): The calculation of vertical space
 	required for a plot title depends on term->v_char, which in turn depends
 	on the font used for the title. Bugfix.
